vault/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: vault
spec:
  selector:
    matchLabels:
      app: vault
  serviceName: vault
  replicas: 1
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.15.2
          ports:
            - containerPort: 8200
              name: vault
          volumeMounts:
            - name: vault-storage
              mountPath: /vault/data
          securityContext:
            capabilities:
              add: ["IPC_LOCK"]
      volumes:
        - name: vault-storage
          persistentVolumeClaim:
            claimName: vault-pvc
