vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  ports:
    - port: 8200
      targetPort: 8200
      protocol: TCP
      name: http
  selector:
    app: vault
  type: ClusterIP
